package bap0031.comp3710.csse.eng.auburn.edu.model;

/**
 * Created by bradley on 4/11/17
 */

public class Grid2048 {


}
